--- a/deel-2-flexbox-layout/opdracht-1/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-1/styles/styles.css
@@ -1,1 +1,43 @@
-/*Schrijf hier jouw CSS*/
+/*GLOBAL*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/*OPDRACHT 1*/
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vH;
+}
+
+/*HEADER*/
+header {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+/*MAIN*/
+main {
+    display: flex;
+    flex-direction: row;
+    flex-grow:1;
+    flex-shrink: 0;
+}
+.section {
+    flex-basis: 20%;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+.section-article {
+    flex-basis: 60%;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+/*FOOTER*/
+footer {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
