--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,46 @@
-/*Schrijf hier jouw CSS*/
+/*GLOBAL*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/*OPDRACHT 2*/
+body {
+    display: flex;
+    flex-direction: row;
+    min-height: 100vH;
+}
+.col-1 {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+.col-2 {
+    /*border: 1px dashed red;*/
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    min-height: 100vH;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+header {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+main {
+    /*border: 1px dashed yellow;*/
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+article {
+    width: 100%;
+    height: 100%;
+}
+footer {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
