--- a/deel-2-flexbox-layout/opdracht-1/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-1/styles/styles.css
@@ -14,6 +14,7 @@ body {
 
 /*HEADER*/
 header {
+    height: 80px;
     flex-grow: 0;
     flex-shrink: 0;
 }
@@ -38,6 +39,7 @@ main {
 
 /*FOOTER*/
 footer {
+    height: 80px;
     flex-grow: 0;
     flex-shrink: 0;
 }
