--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -12,6 +12,7 @@ body {
     min-height: 100vH;
 }
 .col-1 {
+    flex-basis: 200px;
     flex-grow: 0;
     flex-shrink: 0;
 }
@@ -25,6 +26,7 @@ body {
     flex-shrink: 1;
 }
 header {
+    height: 80px;
     flex-grow: 0;
     flex-shrink: 0;
 }
@@ -41,6 +43,7 @@ article {
     height: 100%;
 }
 footer {
+    height: 80px;
     flex-grow: 0;
     flex-shrink: 0;
 }
