--- a/deel-2-flexbox-layout/opdracht-4/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-4/styles/styles.css
@@ -1,1 +1,35 @@
-/*Schrijf hier jouw CSS*/
+/*GLOBAL*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/*OPDRACHT 4*/
+body {
+    display: flex;
+    flex-direction: row;
+    min-height: 100vH;
+}
+
+.outer-col-1 {
+    flex-basis: 200px;
+}
+.outer-col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+}
+header {
+    height: 80px;
+}
+.inner-row {
+    display: flex;
+    flex-direction: row;
+}
+.inner-col {
+    flex-basis: 100%;
+}
+aside {
+    flex-basis: 200px;
+}
