--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -1,1 +1,102 @@
-/*Schrijf hier jouw css*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
+
+/*////////////////////////////////////////////////////////////////////////
+Table of Contents:
+    1. Global Styles
+    2. Typografie
+    3. Areas
+        3.1 Header
+        3.2 Testimonial
+        3.3 Support
+        3.4 Faq
+        3.5 Footer
+    4. Media
+ /////////////////////////////////////////////////////////////////////////*/
+
+/*////////////////////////
+    1. Global Styles
+////////////////////////*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+:root {
+    --color-space-cadet: #151E3F;
+    --color-oxford-blue: #030027;
+    --color-beige: #F2F3D9;
+    --color-buff: #DC9E82;
+    --color-old-rose: #C16E70;
+}
+body {
+    /*display: flex;
+    flex-direction: column;
+    min-height: 100vH;*/
+    background-color: var(--color-beige);
+    border: 1px dashed red;
+}
+/*////////////////////////
+    2. Typography
+////////////////////////*/
+body {
+    font-family: "Poppins", sans-serif;
+}
+h1 {
+    font-size: 14px;
+}
+h3 {
+    font-size: 12px;
+}
+p {
+    font-size: 10px;
+}
+
+/*////////////////////////
+   3. Areas
+////////////////////////*/
+        /*///////////////
+        3.1 Header
+        ///////////////*/
+.header-section {
+    display: flex;
+    flex-direction: column;
+    /*flex-wrap: nowrap;*/
+    /*justify-content: center;*/
+    /*align-content: space-evenly;*/
+    height: 80px;
+    /*margin: 0 auto;*/
+    border: 1px dashed purple;
+}
+.header-container {
+    border: 1px dashed green;
+    max-width: 800px;
+    align-self: center;
+    margin: 20px 0;
+}
+.header-title, .header-subtitle {
+    text-align: center;
+}
+
+        /*///////////////
+        3.2 Main
+        ///////////////*/
+/*.main-section {
+    border: 1px dashed deeppink;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.main-container {
+    border: 1px dashed blue;
+    display: flex;
+    flex-direction: row;
+    max-width: 800px;
+}
+.main-section .item {
+    flex-basis: 280px;
+    flex-grow: 1;
+    flex-shrink: 1;
+}*/
