--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -6,12 +6,8 @@ Table of Contents:
     2. Typografie
     3. Areas
         3.1 Header
-        3.2 Testimonial
-        3.3 Support
-        3.4 Faq
-        3.5 Footer
-    4. Media
- /////////////////////////////////////////////////////////////////////////*/
+        3.2 Main
+//////////////////////////////////////////////////////////////////////////*/
 
 /*////////////////////////
     1. Global Styles
@@ -29,11 +25,8 @@ Table of Contents:
     --color-old-rose: #C16E70;
 }
 body {
-    /*display: flex;
-    flex-direction: column;
-    min-height: 100vH;*/
+    min-height: 100vH;
     background-color: var(--color-beige);
-    border: 1px dashed red;
 }
 /*////////////////////////
     2. Typography
@@ -45,7 +38,7 @@ h1 {
     font-size: 14px;
 }
 h3 {
-    font-size: 12px;
+    font-size: 10px;
 }
 p {
     font-size: 10px;
@@ -60,18 +53,13 @@ p {
 .header-section {
     display: flex;
     flex-direction: column;
-    /*flex-wrap: nowrap;*/
-    /*justify-content: center;*/
-    /*align-content: space-evenly;*/
+    justify-content: center;
     height: 80px;
-    /*margin: 0 auto;*/
-    border: 1px dashed purple;
 }
 .header-container {
     border: 1px dashed green;
-    max-width: 800px;
     align-self: center;
-    margin: 20px 0;
+    margin: 20px 20px;
 }
 .header-title, .header-subtitle {
     text-align: center;
@@ -80,23 +68,25 @@ p {
         /*///////////////
         3.2 Main
         ///////////////*/
-/*.main-section {
-    border: 1px dashed deeppink;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-    flex-shrink: 1;
-}
-
 .main-container {
     border: 1px dashed blue;
     display: flex;
     flex-direction: row;
-    max-width: 800px;
+    column-gap: 30px;
+    justify-content: center;
+    margin: 0 20px 50px 20px;
 }
 .main-section .item {
-    flex-basis: 280px;
+    display: flex;
+    max-width: 180px;
+    height: 350px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--color-old-rose);
     flex-grow: 1;
     flex-shrink: 1;
-}*/
+}
+.main-section .item p {
+    text-align: center;
+    align-self: flex-end;
+}
