--- a/deel-3-webpagina/styles/styles.css
+++ b/deel-3-webpagina/styles/styles.css
@@ -52,34 +52,64 @@ p {
         ///////////////*/
 .header-section {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 80px;
+    flex-direction: row;
+    height: 40px;
+    padding: 0 40px;
+    border: 1px dashed orangered;
 }
 .header-container {
-    border: 1px dashed green;
-    align-self: center;
-    margin: 20px 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /*align-self: center;*/
+
+    width: 100%;
+    border: 1px dashed gold;
+
 }
-.header-title, .header-subtitle {
-    text-align: center;
+.header-title {
+    /*align-self: flex-start;*/
+    border: 1px dashed deeppink;
+}
+.header-nav {
+    /*align-self: flex-end;*/
+    border: 1px dashed orangered;
+}
+.header-nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+
 }
 
         /*///////////////
         3.2 Main
         ///////////////*/
-.main-container {
+.main-section{
+    display: flex;
+    flex-direction: column;
+    min-height: 80px;
+    border: 1px dashed orangered;
+}
+.main-container-top {
+    border: 1px dashed red;
+    margin: 20px 40px;
+}
+.main-title, .main-subtitle {
+    text-align: center;
+}
+.main-container-bottom {
     border: 1px dashed blue;
     display: flex;
     flex-direction: row;
     column-gap: 30px;
     justify-content: center;
-    margin: 0 20px 50px 20px;
+    margin: 0 40px 50px 40px;
 }
 .main-section .item {
     display: flex;
     max-width: 180px;
-    height: 350px;
+    min-height: 350px;
     padding: 10px;
     border-radius: 5px;
     background-color: var(--color-old-rose);
